@@ -16,6 +16,7 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* Moving the pointer with the arrow keys now scrolls the canvas when moving beyond the viewport
 	* sRGB colour scale generation added to palette editor
 	* sRGB gradients added
+	* "Palette->Pick Gradient" approximates an A->B gradient using colours from current palette (see handbook section 3.3.9)
 	* Posterize function in Transform Colour window now has 3 types - Bitwise, Truncated, Rounded
 	* Toggle to transform RGB clipboard image added to Transform Colour window
 	* The Convert To Indexed window now remembers the previous settings in that mtPaint session
@@ -23,17 +24,19 @@ Here is a summary of the main changes in this release (see handbook for full det
 	* GIF animation file exploding is now done internally in mtPaint, not Gifsicle
 	* "Explode Frames" can now save frames in any suitable supported file format
 	* Netpbm file formats (PBM/PGM/PPM/PAM) save/load added
+	* Better support for loading CMYK TIFF files as RGB/RGBA
+	* ICC colour profiles embedded in PNG, JPEG and TIFF images now can be applied on load (using LittleCMS)
 	* "Scale Canvas" now has 3 boundary extension modes - Mirror, Tile, Void
 	* Filename and modified status now part of undo system
 	* Toolbar and menu icons are now themeable (Preferences->Paths->Default Theme)
 	* Command line globbing now possible using -w option, e.g. mtpaint -w "*.jpg"
 	* Drawing and fill tools now are 2-3 times faster
-	* ICC colour profiles embedded in PNG, JPEG and TIFF images now can be applied on load (using LittleCMS)
 	* Workaround for bug in GTK+ versions 2.14.0 - 2.14.2, 2.16.0, 2.16.1 added (spin buttons had wrong max values)
 	* BUGFIX - Problems with editing large images at high zoom levels are now eliminated
 	* BUGFIX - Titlebar now displays new image's filename after loading layers file, as it should
 	* BUGFIX - Layers list now correctly displays selected layer after loading layers file
 	* BUGFIX - Loading TIFF files with X or Y mirroring doesn't cause crash
+	* BUGFIX - Planar TIFF files with alpha now load properly
 	* BUGFIX - Failed operations now do not flag image as modified
 	* BUGFIX - Gradient colours are now properly updated after converting indexed image to RGB
 
